# OS-lab5

./: CMakeLists.txt  README.md
include/: employee.h  protocol.h
src/: client.cpp  server.cpp
tests/: test_protocol.cpp
